# xorbits

./: .dockerignore  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  1.py  LICENSE  README.md  run_pytest.sh  test.py
python/: .gitattributes  .pre-commit-config.yaml.save  MANIFEST.in  conda-spec.txt  local.pth  manifest.in  pyproject.toml  setup.cfg  setup.py  test.py  versioneer.py
python/CI/: conda-environment.yml
python/benchmarks/tpch/: run_queries.py
python/doc/pandas/: __init__.py
python/doc/source/: conf.py
python/doc/source/reference/: index.rst
python/xorbits/: __init__.py  _version.py  config.py  conftest.py  supervisor.py  utils.py  worker.py
python/xorbits/_mars/: __init__.py  _resource.c  _resource.pyx  _utils.cpp  _utils.pxd  _utils.pyx  _version.py  config.py  conftest.py  constants.py  opcodes.py  oscar.py  profiling.py  resource.py  session.py  supervisor.py  typing.py  utils.py  worker.py
python/xorbits/_mars/core/: __init__.py  base.py  context.py  custom_log.py  entrypoints.py  mode.py
python/xorbits/_mars/dataframe/: __init__.py  align.py  arrays.py  core.py  hash_utils.py  initializer.py  operands.py  utils.py
python/xorbits/_mars/deploy/: utils.py
python/xorbits/_mars/learn/: __init__.py  base.py  operands.py  wrappers.py
python/xorbits/_mars/lib/: bloom_filter.py  compression.py  groupby_wrapper.py  mkl_interface.py  nvutils.py  ordered_set.cpp  ordered_set.pyx  tbcode.py
python/xorbits/_mars/metrics/: __init__.py  api.py
python/xorbits/_mars/oscar/: __init__.py  api.py  backend.py  batch.py  context.c  context.pxd  context.pyx  core.c  core.pxd  core.pyx  debug.py  driver.py  errors.py  profiling.py  utils.c  utils.pxd  utils.pyx
python/xorbits/_mars/remote/: __init__.py  core.py  operands.py  run_script.py
python/xorbits/_mars/serialization/: __init__.py  aio.py  arrow.py  core.cpp  core.pxd  core.pyi  core.pyx  cuda.py  exception.py  mars_objects.py  numpy.py  ray.py  scipy.py
python/xorbits/_mars/services/: __init__.py  context.py  core.py
python/xorbits/_mars/storage/: __init__.py  base.py  core.py  cuda.py  errors.py  filesystem.py  mmap.py  plasma.py  ray.py  shared_memory.py  vineyard.py
python/xorbits/_mars/tensor/: __init__.py  array_utils.py  core.py  operands.py  utils.py
python/xorbits/_mars/tests/: __init__.py  core.py  test_cluster.py  test_config.py  test_eager_mode.py  test_profiling.py  test_resource.py  test_session.py  test_utils.py
python/xorbits/adapter/: mars.py
python/xorbits/cluster/: Slurm.py  __init__.py  slurm-template.sh  slurm.sh  test.py
python/xorbits/compat/: _constants.py
python/xorbits/core/: __init__.py  adapter.py  api.py  data.py  execution.py  mars_adaption.py
python/xorbits/core/adapter/: __init__.py  mars.py  typing.py
python/xorbits/core/data/: core.py
python/xorbits/core/test/: test_adapter.py  test_data.py  test_execution.py
python/xorbits/core/tests/: test_adapter.py  test_api.py  test_execution.py  test_execution_exit.py  test_instance_check.py
python/xorbits/core/utils/: docstring.py  fallback.py
python/xorbits/data/: __init__.py  block.py  core.py  dataset.py  operand.py
python/xorbits/data/backends/: huggingface.py  repartition.py
python/xorbits/dataframe/: __init__.py  loc.py
python/xorbits/dataframe/mars_adaption/: __init__.py  core.py  loc.py
python/xorbits/dataframe/test/: __init__.py
python/xorbits/datasets/: __init__.py  adapter.py  dataset.py  iterable_dataset.py  operand.py
python/xorbits/datasets/tests/: test_iterable_dataset.py
python/xorbits/deploy/: __init__.py
python/xorbits/deploy/cluster/: Slurm.py  __init__.py  slurm-template.sh  slurm.py  slurm.sh  test.py
python/xorbits/deploy/docker/: Dockerfile  Dockerfile.base  Dockerfile.cpu  Dockerfile.cpu.base  Dockerfile.cuda  entrypoint.sh  install.sh
python/xorbits/deploy/kubernetes/: __init__.py  _constants.py  client.py  config.py  config.yml  core.py  supervisor.py  worker.py
python/xorbits/deploy/oscar/: file-logging.conf
python/xorbits/deploy/slurm/: __init__.py  slurm.py
python/xorbits/deploy/tests/: test_deploy.py
python/xorbits/experimental/: __init__.py  dedup.py  utils.py
python/xorbits/experimental/tests/: test_text_dedup.py
python/xorbits/lightgbm/: __init__.py
python/xorbits/lightgbm/mars_adapters/: __init__.py  core.py
python/xorbits/lightgbm/tests/: __init__.py  test_classifier.py  test_ranker.py  test_regressor.py
python/xorbits/numpy/: __init__.py  core.py
python/xorbits/numpy/fft/: __init__.py
python/xorbits/numpy/lib/: __init__.py  index_tricks.py
python/xorbits/numpy/linalg/: __init__.py
python/xorbits/numpy/mars_adapters/: __init__.py  core.py  flatiter.py
python/xorbits/numpy/numpy_adapters/: __init__.py  core.py
python/xorbits/numpy/random/: __init__.py
python/xorbits/numpy/special/: __init__.py
python/xorbits/numpy/tests/: test_core.py
python/xorbits/pandas/: __init__.py  accessors.py  core.py  groupby.py  indexing.py  plotting.py  window.py
python/xorbits/pandas/_config/: __init__.py  config.py
python/xorbits/pandas/mars_adapters/: __init__.py  accssor.py  at.py  core.py  ewm.py  iloc.py  indexing.py  loc.py
python/xorbits/pandas/mars_adaption/: __init__.py  accssor.py  core.py  loc.py
python/xorbits/pandas/pandas_adapters/: __init__.py  core.py
python/xorbits/pandas/tests/: test_accessors.py  test_compat.py  test_compatibility.py  test_groupby.py  test_plotting.py  test_window.py
python/xorbits/remote/: __init__.py
python/xorbits/remote/mars_adapters/: __init__.py  core.py
python/xorbits/sklearn/: __init__.py  utils.py
python/xorbits/sklearn/cluster/: __init__.py
python/xorbits/tests/: core.py  mock_pydevd_xml.py  test_cluster.py  test_import_mars.py  test_slurm.py  test_utils.py
python/xorbits/ui/: .eslintrc.yml  .prettierignore  .prettierrc.yml  index.html  package-lock.json  package.json  webpack.config.js
python/xorbits/ui/src/: App.js  (+8 more)
python/xorbits/web/: __init__.py  index_handler.py  version_handler.py
python/xorbits/xgboost/: __init__.py  core.py
(+1685 files in other folders)
