[build-system]
requires = [
    "setuptools<64; python_version<'3.12'",
    "setuptools; python_version>='3.12'",
    "packaging",
    "wheel",
    "oldest-supported-numpy",
    "numpy",
    "pandas==1.2.2; python_version>='3.9' and python_version<'3.10' and platform_machine!='arm64'",
    "pandas==1.4.0; python_version>='3.9' and python_version<'3.10' and platform_machine=='arm64'",
    "pandas==1.3.4; python_version>='3.10' and python_version<'3.11' and platform_machine!='arm64'",
    "pandas==1.4.0; python_version>='3.10' and python_version<'3.11' and platform_machine=='arm64'",
    "pandas==1.5.1; python_version>='3.11' and python_version<'3.12'",
    "pandas>=2.1.1; python_version>='3.12'",
    "scipy==1.5.4; python_version>='3.9' and python_version<'3.10' and platform_machine!='arm64'",
    "scipy==1.7.3; python_version>='3.9' and python_version<'3.10' and platform_machine=='arm64'",
    "scipy==1.7.2; python_version>='3.10' and python_version<'3.11' and platform_machine!='arm64'",
    "scipy==1.7.3; python_version>='3.10' and python_version<'3.11' and platform_machine=='arm64'",
    "scipy==1.9.2; python_version>='3.11' and python_version<'3.12'",
    "scipy>=1.11.2; python_version>='3.12'",
    "cython>=0.29.33",
    "requests>=2.4.0",
    "cloudpickle>=2.2.1; python_version>='3.11'",
    "cloudpickle==1.5.0; python_version<'3.11'",
    "xoscar>=0.0.8",
]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
extend-exclude = '''
^/xorbits/_version.py
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "cuda: mark a test as a cuda case.",
    "hadoop: mark test as a hadoop case.",
    "ray: mark test as a ray case.",
    "pd_compat: mark test as a pandas-compatibility test.",
    "ray_dag: marks tests for ray backend.",
    "skip_ray_dag: marks tests that not execute in ray backend.",
]

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = "pp* *musllinux* *i686 cp39-win32 cp310-win32 cp311-win32 cp312-win32"
manylinux-x86_64-image = "manylinux2014"
