[metadata]
name = xorbits
description = XOrbits: incredibly fast & scalable data science framework
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Qin Xuye
author_email = qinxuye@xprobe.io
maintainer = Qin Xuye
maintainer_email = qinxuye@xprobe.io
license = Apache License 2.0
url = http://github.com/xprobe/xorbits
python_requires = >=3.7
classifier =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy>=1.14.0
    pandas>=1.0.0
    scipy>=1.0.0
    scikit-learn>=0.20
    numexpr>=2.6.4
    cloudpickle>=1.5.0
    pyyaml>=5.1
    psutil>=5.9.0
    pickle5; python_version<"3.8"
    shared-memory38>=0.1.1; python_version<"3.8"
    tornado>=6.0
    sqlalchemy>=1.2.0
    defusedxml>=0.5.0
    tqdm>=4.1.0
    uvloop>=0.14.0; sys.platform!="win32"

[options.packages.find]
exclude =
    *.conftest*
    *.tests.*
    *.tests

[options.entry_points]
console_scripts =
    xorbits-supervisor = xorbits._mars.deploy.oscar.supervisor:main
    xorbits-worker = xorbits._mars.deploy.oscar.worker:main

[options.extras_require]
dev =
    cython>=0.29
    pytest>=3.5.0
    pytest-cov>=2.5.0
    pytest-timeout>=1.2.0
    pytest-forked>=1.0
    pytest-asyncio>=0.14.0
    mock>=4.0.0; python_version<"3.8"
    flake8>=3.8.0
    black
extra =
    pillow>=7.0.0
    pyarrow>=0.11.0,!=0.16.*
    lz4>=1.0.0
    fsspec>=2022.7.1,!=2022.8.0
kubernetes =
    kubernetes>=10.0.0
ray =
    ray>=1.8.0
vineyard =
    vineyard>=0.3; sys.platform != "win32"

[coverage:run]
branch = True
relative_files = True
cover_pylib = False
parallel = True
concurrency = multiprocessing,thread
plugins = Cython.Coverage
include =
    xorbits/*
omit =
    xorbits/_version.py
    */_mars/*
    *.pxd
    */tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    return NotImplemented

[versioneer]
VCS = git
style = pep440
versionfile_source = xorbits/_version.py
versionfile_build = xorbits/_version.py
tag_prefix = v
parentdir_prefix = xorbits-

[flake8]
max-line-length = 100
select =
    E9,
    E101,
    E111,
    E117,
    E127,
    E201,
    E202,
    E223,
    E224,
    E225,
    E231,
    E242,
    E251,
    E273,
    E274,
    E275,
    E301,
    E302,
    E303,
    E304,
    E305,
    E401,
    E703,
    E901,
    E999,
    F7,
    F63,
    F82,
    F401,
    F811,
    F821,
    F822,
    F823,
    F841,
    W191,
    W291,
    W292,
    W293,
    W391,
    W601,
    W602,
    W603,
    W604,
    W605
exclude =
    __init__.py
    __pycache__
    .git/
    .github/
    benchmarks/asv_bench/env/
    build/
    ci/
    dist/
    docs/
    xorbits/_mars/lib/nvutils.py
    xorbits/_mars/lib/uhashring/*
    xorbits/_mars/lib/version.py

[codespell]
ignore-words-list = hist,rcall,fpr,ser,nd,inout,ot,Ba,ba,asend,hart,coo,splitted,datas,fro
skip = .idea,.git,./build,./docs/build,./xorbits/_mars/lib,node_modules,static,generated,*.po,*.ts,*.json,*.c,*.cpp,*.cfg
