[metadata]
name = xorbits
description = Scalable Python data science, in an API compatible & lightning fast way.
author = Qin Xuye
author_email = qinxuye@xprobe.io
maintainer = Qin Xuye
maintainer_email = qinxuye@xprobe.io
license = Apache License 2.0
url = http://github.com/xorbitsai/xorbits
python_requires = >=3.9
classifier =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    xoscar>=0.0.8
    numpy>=1.14.0
    pandas>=1.0.0
    scipy>=1.0.0; sys_platform!="win32" or python_version>="3.10"
    scipy>=1.0.0,<=1.9.1; sys_platform=="win32" and python_version<"3.10"
    scikit-learn>=1.1.3; sys_platform!="win32" or python_version>="3.10"
    scikit-learn>=0.20,<=1.1.2; sys_platform=="win32" and python_version<"3.10"
    cloudpickle>=2.2.1; python_version>="3.11"
    cloudpickle>=1.5.0; python_version<"3.11"
    pyyaml>=5.1
    psutil>=5.9.0
    tornado>=6.0
    sqlalchemy>=1.2.0
    defusedxml>=0.5.0
    tqdm>=4.1.0
    uvloop>=0.14.0; sys_platform!="win32"
    pyarrow>=5.0.0
    fsspec>=2022.7.1,!=2022.8.0

[options.packages.find]
exclude =
    *.conftest*
    *.tests.*
    *.tests

[options.entry_points]
console_scripts =
    xorbits-supervisor = xorbits.supervisor:main
    xorbits-worker = xorbits.worker:main

[options.extras_require]
dev =
    cython>=0.29
    ipython>=6.5.0
    pytest>=3.5.0
    pytest-cov>=2.5.0
    pytest-timeout>=1.2.0
    pytest-forked>=1.0
    pytest-asyncio>=0.14.0
    pytest-mock>=3.11.1
    sphinx
    pydata-sphinx-theme>=0.3.0
    sphinx-intl>=0.9.9
    flake8>=3.8.0
    xgboost>=1.3.0
    lightgbm>=3.3.5
    black
    matplotlib
    datasets
doc =
    sphinx
    pydata-sphinx-theme>=0.3.0
    sphinx-intl>=0.9.9
    matplotlib
extra =
    pillow>=7.0.0
    lz4>=1.0.0
    numexpr>=2.6.4
jax =
    jax>=0.4.0; sys.platform != "win32"
    jaxlib>=0.4.0; sys.platform != "win32"
kubernetes =
    kubernetes>=10.0.0
ray =
    ray>=1.8.0
vineyard =
    vineyard>=0.3; sys.platform != "win32"
aws =
    s3fs
azure =
    adlfs
datasets =
    datasets

[coverage:run]
branch = True
relative_files = True
cover_pylib = False
plugins = Cython.Coverage
include =
    xorbits/*
omit =
    xorbits/_version.py
    *.pxd
    */tests/*
    xorbits/deploy/slurm/slurm.py
    xorbits/deploy/kubernetes/core.py
    xorbits/deploy/kubernetes/supervisor.py
    xorbits/deploy/kubernetes/worker.py
    xorbits/_mars/compat.py
    xorbits/_mars/conftest.py
    xorbits/_mars/deploy/kubedl/*
    xorbits/_mars/deploy/kubernetes/*
    xorbits/_mars/deploy/yarn/*
    xorbits/_mars/lib/aio/_runners.py
    xorbits/_mars/lib/aio/lru.py
    xorbits/_mars/lib/functools32/*
    xorbits/_mars/lib/bloom_filter.py
    xorbits/_mars/lib/futures/*
    xorbits/_mars/lib/six.py
    xorbits/_mars/lib/nvutils.py
    xorbits/_mars/lib/ordered_set.py
    xorbits/_mars/lib/uhashring/*
    xorbits/_mars/learn/contrib/xgboost/tracker.py
    xorbits/_mars/learn/cluster/_k_means_fast.*
    xorbits/_mars/learn/cluster/_k_means_elkan.pyx
    xorbits/_mars/learn/cluster/_k_means_lloyd.pyx
    xorbits/_mars/learn/proxima/*
    xorbits/_mars/learn/utils/_cython_blas.*
    xorbits/_mars/tensor/einsum/einsumfunc.py
    xorbits/_mars/storage/cuda.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    return NotImplemented

[versioneer]
VCS = git
style = pep440
versionfile_source = xorbits/_version.py
versionfile_build = xorbits/_version.py
tag_prefix = v
parentdir_prefix = xorbits-

[flake8]
max-line-length = 100
select =
    E9,
    E101,
    E111,
    E117,
    E127,
    E201,
    E202,
    E223,
    E224,
    E225,
    E231,
    E242,
    E251,
    E273,
    E274,
    E275,
    E301,
    E302,
    E303,
    E304,
    E305,
    E401,
    E703,
    E901,
    E999,
    F7,
    F63,
    F82,
    F401,
    F811,
    F821,
    F822,
    F823,
    F841,
    W191,
    W291,
    W292,
    W293,
    W391,
    W601,
    W602,
    W603,
    W604,
    W605
exclude =
    __init__.py
    __pycache__
    .git/
    .github/
    build/
    ci/
    dist/
    docs/
    xorbits/_mars/lib/nvutils.py
    xorbits/_mars/lib/uhashring/*
    xorbits/_mars/lib/version.py

per-file-ignores =
     */core/adapter.py: F401

[codespell]
ignore-words-list = hist,rcall,fpr,ser,nd,inout,ot,Ba,ba,asend,hart,coo,splitted,datas,fro,ags,rabit,lama,
skip = .idea,.git,./build,./docs/build,xorbits/_mars/lib,node_modules,static,generated,*.po,*.ts,*.json,*.c,*.cpp,*.cfg

[isort]
profile = black
skip_glob = */_version.py,*/versioneer.py,xorbits/_mars/lib,*.pyx,*.pyd,*pxd

[mypy]
ignore_missing_imports=True
follow_imports=skip
exclude = xorbits/_mars
